--- a/events.html
+++ b/events.html
@@ -30,7 +30,7 @@
                     <h2 class="nav-item"><a href="studiomap.html">Studio map</a></h2>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Resources</h2>
+                    <h2 class="nav-item" id="nav-item">Resources</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="studios.html">Studios</a></p>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Shops</h2>
+                    <h2 class="nav-item" id="nav-item">Shops</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="clothing.html">Clothing</a></p>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Skills</h2>
+                    <h2 class="nav-item" id="nav-item">Skills</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="hoop.html">Hoop/lyra</a></p>
@@ -65,7 +65,7 @@
                         <p class="dropdown-item"><a href="hammock.html">Hammock/sling</a></p>
                         <p class="dropdown-item"><a href="pole.html">Pole</a></p>
                         <p class="dropdown-item"><a href="straps.html">Straps + rope</a></p>
-                        <p class="dropdown-item"><a href="otherskills.html">Others</a></p>
+                        <p class="dropdown-item"><a href="otherskills.html">Specialty</a></p>
                         <p class="dropdown-item"><a href="allskills.html">See all</a></p>
                     </div>
                 </div>
@@ -87,86 +87,86 @@
 
     </header>
 
-    <main id="main events-main" class="events-main">
-        <div class="events-top">
-            <h1 class="events-h1">What's on</h1>
-            <div class="events-search-items">
-                <input type="search" class="search-bar" id="events-search-bar" placeholder="Search...">
-                <img src="assets/magnify.svg" class="search-icon" id="events-search-icon">
+    <main id="main lineup-main" class="lineup-main">
+        <div class="lineup-top">
+            <h1 class="lineup-h1">What's on</h1>
+            <div class="lineup-search-items">
+                <input type="search" class="search-bar" id="lineup-search-bar" placeholder="Search...">
+                <img src="assets/magnify.svg" class="search-icon" id="lineup-search-icon">
             </div>
         </div>
-        <div class="events-container" id="events-container">
+        <div class="lineup-container" id="lineup-container">
             <h1>Featured events</h1>
-            <div class="events-lineup">
-                <div class="event-item">
-                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
-                    <div class="event-info-box">
-                        <div class="event-title-icon">
-                            <h3 class="event-title">Name of event</h3>
+            <div class="lineup-lineup">
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of event</h3>
                             <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                         </div>
-                        <p class="event-info-text">Date and time</p>
-                        <p class="event-info-text">Location</p>
+                        <p class="lineup-info-text">Date and time</p>
+                        <p class="lineup-info-text">Location</p>
                     </div>
                 </div>
 
-                <div class="event-item">
-                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
-                    <div class="event-info-box">
-                        <div class="event-title-icon">
-                            <h3 class="event-title">Name of event</h3>
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of event</h3>
                             <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                         </div>
-                        <p class="event-info-text">Date and time</p>
-                        <p class="event-info-text">Location</p>
+                        <p class="lineup-info-text">Date and time</p>
+                        <p class="lineup-info-text">Location</p>
                     </div>
                 </div>
 
-                <div class="event-item">
-                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
-                    <div class="event-info-box">
-                        <div class="event-title-icon">
-                            <h3 class="event-title">Name of event</h3>
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of event</h3>
                             <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                         </div>
-                        <p class="event-info-text">Date and time</p>
-                        <p class="event-info-text">Location</p>
+                        <p class="lineup-info-text">Date and time</p>
+                        <p class="lineup-info-text">Location</p>
                     </div>
                 </div>
 
-                <div class="event-item">
-                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
-                    <div class="event-info-box">
-                        <div class="event-title-icon">
-                            <h3 class="event-title">Name of event</h3>
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of event</h3>
                             <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                         </div>
-                        <p class="event-info-text">Date and time</p>
-                        <p class="event-info-text">Location</p>
+                        <p class="lineup-info-text">Date and time</p>
+                        <p class="lineup-info-text">Location</p>
                     </div>
                 </div>
 
-                <div class="event-item">
-                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
-                    <div class="event-info-box">
-                        <div class="event-title-icon">
-                            <h3 class="event-title">Name of event</h3>
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of event</h3>
                             <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                         </div>
-                        <p class="event-info-text">Date and time</p>
-                        <p class="event-info-text">Location</p>
+                        <p class="lineup-info-text">Date and time</p>
+                        <p class="lineup-info-text">Location</p>
                     </div>
                 </div>
 
-                <div class="event-item">
-                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
-                    <div class="event-info-box">
-                        <div class="event-title-icon">
-                            <h3 class="event-title">Name of event</h3>
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of event</h3>
                             <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                         </div>
-                        <p class="event-info-text">Date and time</p>
-                        <p class="event-info-text">Location</p>
+                        <p class="lineup-info-text">Date and time</p>
+                        <p class="lineup-info-text">Location</p>
                     </div>
                 </div>
 
