--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h2 class="nav-item"><a href="studiomap.html">Studio map</a></h2>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Resources</h2>
+                    <h2 class="nav-item" id="nav-item">Resources</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="studios.html">Studios</a></p>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Shops</h2>
+                    <h2 class="nav-item" id="nav-item">Shops</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="clothing.html">Clothing</a></p>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Skills</h2>
+                    <h2 class="nav-item" id="nav-item">Skills</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="hoop.html">Hoop/lyra</a></p>
@@ -61,7 +61,7 @@
                         <p class="dropdown-item"><a href="hammock.html">Hammock/sling</a></p>
                         <p class="dropdown-item"><a href="pole.html">Pole</a></p>
                         <p class="dropdown-item"><a href="straps.html">Straps + rope</a></p>
-                        <p class="dropdown-item"><a href="otherskills.html">Others</a></p>
+                        <p class="dropdown-item"><a href="otherskills.html">Specialty</a></p>
                         <p class="dropdown-item"><a href="allskills.html">See all</a></p>
                     </div>
                 </div>
@@ -370,10 +370,10 @@
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
-                        <h2 class="item-name">Name of skill</h2>
+                        <h2 class="item-name"><a href="hoop.html">Hoop/lyra</a></h2>
                         <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
-                    <p class="item-text">Apparatus</p>
+                    <p class="item-text">Description</p>
                     <div class="item-tags-group">
                         <button class="item-tag">Tag</button>
                         <button class="item-tag">Tag</button>
@@ -386,10 +386,10 @@
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
-                        <h2 class="item-name">Name of skill</h2>
+                        <h2 class="item-name"><a href="silks.html">Silks</a></h2>
                         <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
-                    <p class="item-text">Apparatus</p>
+                    <p class="item-text">Description</p>
                     <div class="item-tags-group">
                         <button class="item-tag">Tag</button>
                         <button class="item-tag">Tag</button>
@@ -402,10 +402,10 @@
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
-                        <h2 class="item-name">Name of skill</h2>
+                        <h2 class="item-name"><a href="trapeze.html">Trapeze</a></h2>
                         <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
-                    <p class="item-text">Apparatus</p>
+                    <p class="item-text">Description</p>
                     <div class="item-tags-group">
                         <button class="item-tag">Tag</button>
                         <button class="item-tag">Tag</button>
@@ -418,10 +418,10 @@
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
-                        <h2 class="item-name">Name of skill</h2>
+                        <h2 class="item-name"><a href="hammock.html">Hammock/sling</a></h2>
                         <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
-                    <p class="item-text">Apparatus</p>
+                    <p class="item-text">Description</p>
                     <div class="item-tags-group">
                         <button class="item-tag">Tag</button>
                         <button class="item-tag">Tag</button>
@@ -434,10 +434,42 @@
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
-                        <h2 class="item-name">Name of skill</h2>
+                        <h2 class="item-name"><a href="pole.html">Pole</a></h2>
                         <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
-                    <p class="item-text">Apparatus</p>
+                    <p class="item-text">Description</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="straps.html">Straps and rope</a></h2>
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Description</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="otherskills.html">Specialty</a></h2>
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Description</p>
                     <div class="item-tags-group">
                         <button class="item-tag">Tag</button>
                         <button class="item-tag">Tag</button>
