--- a/studiomap.html
+++ b/studiomap.html
@@ -30,7 +30,7 @@
                     <h2 class="nav-item"><a href="studiomap.html">Studio map</a></h2>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Resources</h2>
+                    <h2 class="nav-item" id="nav-item">Resources</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="studios.html">Studios</a></p>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Shops</h2>
+                    <h2 class="nav-item" id="nav-item">Shops</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="clothing.html">Clothing</a></p>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Skills</h2>
+                    <h2 class="nav-item" id="nav-item">Skills</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
                         <p class="dropdown-item"><a href="hoop.html">Hoop/lyra</a></p>
@@ -65,7 +65,7 @@
                         <p class="dropdown-item"><a href="hammock.html">Hammock/sling</a></p>
                         <p class="dropdown-item"><a href="pole.html">Pole</a></p>
                         <p class="dropdown-item"><a href="straps.html">Straps + rope</a></p>
-                        <p class="dropdown-item"><a href="otherskills.html">Others</a></p>
+                        <p class="dropdown-item"><a href="otherskills.html">Specialty</a></p>
                         <p class="dropdown-item"><a href="allskills.html">See all</a></p>
                     </div>
                 </div>
@@ -89,11 +89,11 @@
 
     <main id="main map-main" class="map-main">
         <h1 class="map-h1">Explore the studio map</h1>
+        <img class="map-placeholder-img" id="map-placeholder-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
         <div class="map-search-items">
-            <input type="search" class="search-bar" id="map-search-bar" placeholder="Search...">
+            <input type="search" class="search-bar" id="map-search-bar" placeholder="Search location...">
             <img src="assets/magnify.svg" class="search-icon" id="map-search-icon">
         </div>
-        <img class="map-placeholder-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
         <div class="found-studios-container" id="found-studios-container">
             <div class="blue-background" id="blue-background">
                 <h1 class="popular-locations-header">Popular locations</h1>
