Finish basic filter menu functionality

--- a/coaches.html
+++ b/coaches.html
@@ -97,6 +97,7 @@
         </div>
         <div class="lineup-container" id="lineup-container">
             <h1>Featured coaches</h1>
+            <div class="filter-menu" id="filter-menu"></div>
             <div class="lineup-lineup">
                 <div class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for image">
