Fix layout tweaks and accessibility features

--- a/studiomap.html
+++ b/studiomap.html
@@ -18,83 +18,83 @@
                 </a>
             </div>
             <a href="index.html"><img class="logo" src="assets/logo.jpg" alt="The Aerial Arts Hub"></a>
-            <img class="nav-logo" id="nav-logo" src="assets/menu.svg" alt="Open navigation menu">
+            <button class="nav-logo" id="nav-logo"><img src="assets/menu.svg" alt="Open navigation menu"></button>
         </div>
 
         <!-- mobile menu -->
 
         <nav class="mobile-menu" id="mobile-menu">
-            <img class="closing-x" id="closing-x" src="assets/close.svg" alt="Close the menu">
-            <div class="nav-links">
-                <div class="nav-item-div">
-                    <h2 class="nav-item"><a href="studiomap.html">Studio map</a></h2>
-                </div>
-                <div class="nav-item-div">
-                    <h2 class="nav-item" id="nav-item">Resources</h2>
-                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-                    <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item"><a href="studios.html">Studios</a></p>
-                        <p class="dropdown-item"><a href="coaches.html">Coaches</a></p>
-                        <p class="dropdown-item"><a href="performers.html">Performers</a></p>
-                        <p class="dropdown-item"><a href="collectives.html">Troupes and collectives</a></p>
-                        <p class="dropdown-item"><a href="retreats.html">Retreats</a></p>
-                        <p class="dropdown-item"><a href="competitions.html">Competitions</a></p>
-                        <p class="dropdown-item"><a href="festivals.html">Festivals</a></p>
-                        <p class="dropdown-item"><a href="health.html">Physio and flexy</a></p>
-                        <p class="dropdown-item"><a href="photography.html">Photography and video</a></p>
-                        <p class="dropdown-item"><a href="otherresources.html">Other resources</a></p>
-                        <p class="dropdown-item"><a href="allresources.html">See all</a></p>
-                    </div>
-                </div>
-                <div class="nav-item-div">
-                    <h2 class="nav-item" id="nav-item">Shops</h2>
-                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-                    <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item"><a href="clothing.html">Clothing</a></p>
-                        <p class="dropdown-item"><a href="heels.html">Heels</a></p>
-                        <p class="dropdown-item"><a href="equipment.html">Equipment</a></p>
-                    </div>
-                </div>
-                <div class="nav-item-div">
-                    <h2 class="nav-item" id="nav-item">Skills</h2>
-                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-                    <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item"><a href="hoop.html">Hoop/lyra</a></p>
-                        <p class="dropdown-item"><a href="silks.html">Silks</a></p>
-                        <p class="dropdown-item"><a href="trapeze.html">Trapeze</a></p>
-                        <p class="dropdown-item"><a href="hammock.html">Hammock/sling</a></p>
-                        <p class="dropdown-item"><a href="pole.html">Pole</a></p>
-                        <p class="dropdown-item"><a href="straps.html">Straps + rope</a></p>
-                        <p class="dropdown-item"><a href="otherskills.html">Specialty</a></p>
-                        <p class="dropdown-item"><a href="allskills.html">See all</a></p>
-                    </div>
-                </div>
-                <div class="nav-item-div">
-                    <h2 class="nav-item"><a href="events.html">What's on</a></h2>
-                </div>
-                <div class="nav-item-div">
-                    <h2 class="nav-item"><a href="about.html">About</a></h2>
-                </div>
+            <button class="closing-x" id="closing-x"><img src="assets/close.svg" alt="Close the menu"></button>
+    <div class="nav-links">
+        <div class="nav-item-div">
+            <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
+        </div>
+        <div class="nav-item-div">
+            <button class="nav-item" id="nav-item"><h2>Resources</h2></button>
+            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+            <div class="dropdown-container" id="dropdown-container">
+                <p class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></p>
+                <p class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></p>
+                <p class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></p>
+                <p class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes and collectives</a></p>
+                <p class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></p>
+                <p class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a></p>
+                <p class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></p>
+                <p class="dropdown-item"><a href="health.html" aria-label="Physios and flexibility resources">Physio and flexy</a></p>
+                <p class="dropdown-item"><a href="photography.html" aria-label="Photographers and videographers">Photography and video</a></p>
+                <p class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other resources</a></p>
+                <p class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a></p>
             </div>
-            <div class="nav-input">
-                <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
-                <div class="search-items">
-                    <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
-                    <img src="assets/magnify.svg" class="search-icon" id="search-icon">
-                </div>
+        </div>
+        <div class="nav-item-div">
+            <button class="nav-item" id="nav-item"><h2>Shops</h2></button>
+            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+            <div class="dropdown-container" id="dropdown-container">
+                <p class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a></p>
+                <p class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></p>
+                <p class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></p>
             </div>
+        </div>
+        <div class="nav-item-div">
+            <button class="nav-item" id="nav-item"><h2>Skills</h2></button>
+            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+            <div class="dropdown-container" id="dropdown-container">
+                <p class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></p>
+                <p class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></p>
+                <p class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></p>
+                <p class="dropdown-item"><a href="hammock.html" aria-label="Hammock or sling skills">Hammock/sling</a></p>
+                <p class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></p>
+                <p class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps + rope</a></p>
+                <p class="dropdown-item"><a href="otherskills.html" aria-label="Specialty aerial skills">Specialty</a></p>
+                <p class="dropdown-item"><a href="allskills.html" aria-label="See all aerial and pole skills">See all</a></p>
+            </div>
+        </div>
+        <div class="nav-item-div">
+            <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a></h2>
+        </div>
+        <div class="nav-item-div">
+            <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
+        </div>
+    </div>
+    <div class="nav-input">
+        <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
+        <div class="search-items">
+            <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+            <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
+        </div>
+    </div>
         </nav>
 
     </header>
 
     <main id="main map-main" class="map-main">
         <h1 class="map-h1">Explore the studio map</h1>
-        <img class="map-placeholder-img" id="map-placeholder-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
-        <div class="map-search-items">
-            <input type="search" class="search-bar" id="map-search-bar" placeholder="Search location...">
-            <img src="assets/magnify.svg" class="search-icon" id="map-search-icon">
+        <img class="map-card-item-img" id="map-card-item-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
+        <div class="lineup-search-items">
+            <input type="search" class="search-bar" id="lineup-search-bar" placeholder="Search...">
+            <img src="assets/magnify.svg" class="search-icon" id="lineup-search-icon" alt="Search icon">
         </div>
-        <div class="found-studios-container" id="found-studios-container">
+        <!-- <div class="found-studios-container" id="found-studios-container">
             <div class="blue-background" id="blue-background">
                 <h1 class="popular-locations-header">Popular locations</h1>
                 <div class="popular-location-item">
@@ -110,16 +110,94 @@
                     <h3 class="popular-location-number">X studios</h3>
                 </div>
             </div>
+        </div> -->
+        <div class="lineup-container" id="lineup-container">
+            <h1>Featured studios</h1>
+            <div class="filter-menu" id="filter-menu"></div>
+            <div class="lineup-lineup">
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of studio</h3>
+                            <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                        </div>
+                        <p class="lineup-info-text">City, country</p>
+                        <p class="lineup-info-text">Other info</p>
+                    </div>
+                </div>
+
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of studio</h3>
+                            <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                        </div>
+                        <p class="lineup-info-text">City, country</p>
+                        <p class="lineup-info-text">Other info</p>
+                    </div>
+                </div>
+
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of studio</h3>
+                            <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                        </div>
+                        <p class="lineup-info-text">City, country</p>
+                        <p class="lineup-info-text">Other info</p>
+                    </div>
+                </div>
+
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of studio</h3>
+                            <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                        </div>
+                        <p class="lineup-info-text">City, country</p>
+                        <p class="lineup-info-text">Other info</p>
+                    </div>
+                </div>
+
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of studio</h3>
+                            <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                        </div>
+                        <p class="lineup-info-text">City, country</p>
+                        <p class="lineup-info-text">Other info</p>
+                    </div>
+                </div>
+
+                <div class="lineup-item">
+                    <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="lineup-info-box">
+                        <div class="lineup-title-icon">
+                            <h3 class="lineup-title">Name of studio</h3>
+                            <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                        </div>
+                        <p class="lineup-info-text">City, country</p>
+                        <p class="lineup-info-text">Other info</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </main>
 
     <footer>
         <div class="footer-links-group">
-            <p class="footer-link"><a href="index.html">Home</a></p>
-            <p class="footer-link"><a href="about.html">About</a></p>
-            <p class="footer-link"><a href="signin.html">Sign in</a></p>
+            <p class="footer-link"><a href="#header" aria-label="Back to top">Home</a></p>
+            <p class="footer-link"><a href="about.html" aria-label="About page">About</a></p>
+            <p class="footer-link"><a href="signin.html" aria-label="Sign in">Sign in</a></p>
         </div>
-        <a href="#header"><img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top"></a>
+        <a href="#header" aria-label="Back to top"><img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top"></a>
     </footer>
 
     <script src="script.js"></script>
