Finalise layout adjustments and add hover effects

--- a/about.html
+++ b/about.html
@@ -88,10 +88,9 @@
 
     </header>
 
-    <main id="main" class="main-left-margin">
+    <main id="main" class="about-main">
         <img class="about-item-img" src="assets/placeholder.jpg" alt="About page featured image">
         <div class="about-text">
-            <p class="about-p underlined">About</p>
             <h2 class="about-h2">The Aerial Arts Hub</h2>
             <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
                 to discover studios, coaches, performers, brands, and other useful resources all over the world.
