--- a/index.html
+++ b/index.html
@@ -170,6 +170,38 @@
                 </div>
             </div>
 
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of event</h2>
+                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                    </div>
+                    <p class="item-text">Date and location</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of event</h2>
+                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                    </div>
+                    <p class="item-text">Date and location</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
             <div class="arrow-see-all-container">
                 <a href="events.html" aria-label="Aerial and pole events">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
@@ -181,6 +213,38 @@
 
         <h1 class="cards-category"><a href="studios.html" aria-label="Aerial and pole studios">Find a studio</a></h1>
         <div class="scroll-cards">
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of studio</h2>
+                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of studio</h2>
+                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
 
             <div class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
@@ -274,6 +338,38 @@
         <h1 class="cards-category"><a href="clothing.html" aria-label="Aerial and polewear">Discover pole & aerial
                 wear</a></h1>
         <div class="scroll-cards">
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of brand</h2>
+                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of brand</h2>
+                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg" alt="Like"></button>
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
 
             <div class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
@@ -501,7 +597,6 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="coaches.html" aria-label="Coaches">Find a coach</a></h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">Near you or online</p>
                     <div class="item-tags-group">
@@ -518,7 +613,6 @@
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="performers.html" aria-label="Performers">Discover performers</a>
                         </h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">Around the world</p>
                     <div class="item-tags-group">
@@ -535,7 +629,6 @@
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="collectives.html" aria-label="Troupes and collectives">Explore
                                 collectives</a></h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">Around the world</p>
                     <div class="item-tags-group">
@@ -551,7 +644,6 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="retreats.html" aria-label="Retreats">Find a retreat</a></h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">Anywhere in the world</p>
                     <div class="item-tags-group">
@@ -568,7 +660,6 @@
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="competitions.html" aria-label="Competitions">Join a
                                 competition</a></h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">In your area</p>
                     <div class="item-tags-group">
@@ -584,7 +675,6 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="festivals.html" aria-label="Festivals">Find festivals</a></h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">Around the world</p>
                     <div class="item-tags-group">
@@ -601,7 +691,6 @@
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="health.html" aria-label="Physios and flexibility resources">Find
                                 a physio</a></h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">Near you or online</p>
                     <div class="item-tags-group">
@@ -618,7 +707,6 @@
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="photography.html"
                                 aria-label="Photographers and videographers">Find a photographer</a></h2>
-                        <div class="heart-icon"></div>
                     </div>
                     <p class="item-text">In your area</p>
                     <div class="item-tags-group">
