Finish desktop navbar design + filter layout

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <button class="nav-logo" id="nav-logo"><img src="assets/menu.svg" alt="Open navigation menu"></button>
         </div>
 
+        <!-- desktop nav -->
+
         <nav class="desktop-menu" id="desktop-menu">
             <ul class="nav-links">
                 <li class="nav-item-div">
@@ -28,7 +30,7 @@
                         <h2>Resources</h2>
                         <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     </button>
-                    <ul class="dropdown-container" id="dropdown-container">
+                    <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
                         <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
                         <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
                         <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
@@ -53,7 +55,7 @@
                         <h2>Brands</h2>
                         <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     </button>
-                    <ul class="dropdown-container" id="dropdown-container">
+                    <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
                         <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
                         </li>
                         <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></li>
@@ -65,7 +67,7 @@
                         <h2>Skills</h2>
                         <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     </button>
-                    <ul class="dropdown-container" id="dropdown-container">
+                    <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
                         <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></li>
                         <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
                         <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
@@ -83,6 +85,9 @@
                 <li class="nav-item-div">
                     <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a>
                     </h2>
+                </li>
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
                 </li>
                 <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
                 <div class="search-items">
