--- a/about.html
+++ b/about.html
@@ -18,72 +18,170 @@
                     <img class="arrow-back-img" id="arrow-back-img" src="assets/chevron-left.svg" alt="Back">
                 </a>
             </div>
-            <a href="index.html" aria-label="Home page"><img class="logo" src="assets/logo.jpg" alt="The Aerial Arts Hub"></a>
+            <a href="index.html" aria-label="Home page"><img class="logo" src="assets/logo.jpg"
+                    alt="The Aerial Arts Hub"></a>
             <button class="nav-logo" id="nav-logo"><img src="assets/menu.svg" alt="Open navigation menu"></button>
         </div>
+
+        <!-- desktop nav -->
+
+        <nav class="desktop-menu" id="desktop-menu">
+            <ul class="nav-links">
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Resources</h2>
+                        <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    </button>
+                    <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
+                        <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
+                        <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
+                        <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
+                        <li class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
+                                and collectives</a></li>
+                        <li class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></li>
+                        <li class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
+                        </li>
+                        <li class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></li>
+                        <li class="dropdown-item"><a href="health.html"
+                                aria-label="Physios and flexibility resources">Physio and flexy</a></li>
+                        <li class="dropdown-item"><a href="photography.html"
+                                aria-label="Photographers and videographers">Photography and video</a></li>
+                        <li class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
+                                resources</a></li>
+                        <li class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Brands</h2>
+                        <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    </button>
+                    <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
+                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
+                        </li>
+                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></li>
+                        <li class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Skills</h2>
+                        <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    </button>
+                    <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
+                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></li>
+                        <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
+                        <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
+                        <li class="dropdown-item"><a href="hammock.html"
+                                aria-label="Hammock or sling skills">Hammock/sling</a></li>
+                        <li class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></li>
+                        <li class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps +
+                                rope</a></li>
+                        <li class="dropdown-item"><a href="otherskills.html"
+                                aria-label="Specialty aerial skills">Specialty</a></li>
+                        <li class="dropdown-item"><a href="allskills.html"
+                                aria-label="See all aerial and pole skills">See all</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a>
+                    </h2>
+                </li>
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
+                </li>
+                <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
+                <div class="search-items">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
+                </div>
+            </ul>
+            <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+        </nav>
 
         <!-- mobile menu -->
 
         <nav class="mobile-menu" id="mobile-menu">
             <button class="closing-x" id="closing-x"><img src="assets/close.svg" alt="Close the menu"></button>
-    <div class="nav-links">
-        <div class="nav-item-div">
-            <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
-        </div>
-        <div class="nav-item-div">
-            <button class="nav-item" id="nav-item"><h2>Resources</h2></button>
-            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-            <div class="dropdown-container" id="dropdown-container">
-                <p class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></p>
-                <p class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></p>
-                <p class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></p>
-                <p class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes and collectives</a></p>
-                <p class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></p>
-                <p class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a></p>
-                <p class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></p>
-                <p class="dropdown-item"><a href="health.html" aria-label="Physios and flexibility resources">Physio and flexy</a></p>
-                <p class="dropdown-item"><a href="photography.html" aria-label="Photographers and videographers">Photography and video</a></p>
-                <p class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other resources</a></p>
-                <p class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a></p>
+            <div class="nav-links">
+                <div class="nav-item-div">
+                    <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
+                </div>
+                <div class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Resources</h2>
+                    </button>
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <div class="dropdown-container" id="dropdown-container">
+                        <p class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></p>
+                        <p class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></p>
+                        <p class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></p>
+                        <p class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
+                                and collectives</a></p>
+                        <p class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></p>
+                        <p class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
+                        </p>
+                        <p class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></p>
+                        <p class="dropdown-item"><a href="health.html"
+                                aria-label="Physios and flexibility resources">Physio and flexy</a></p>
+                        <p class="dropdown-item"><a href="photography.html"
+                                aria-label="Photographers and videographers">Photography and video</a></p>
+                        <p class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
+                                resources</a></p>
+                        <p class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Shops</h2>
+                    </button>
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <div class="dropdown-container" id="dropdown-container">
+                        <p class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
+                        </p>
+                        <p class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></p>
+                        <p class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></p>
+                    </div>
+                </div>
+                <div class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Skills</h2>
+                    </button>
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <div class="dropdown-container" id="dropdown-container">
+                        <p class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></p>
+                        <p class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></p>
+                        <p class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></p>
+                        <p class="dropdown-item"><a href="hammock.html"
+                                aria-label="Hammock or sling skills">Hammock/sling</a></p>
+                        <p class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></p>
+                        <p class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps +
+                                rope</a></p>
+                        <p class="dropdown-item"><a href="otherskills.html"
+                                aria-label="Specialty aerial skills">Specialty</a></p>
+                        <p class="dropdown-item"><a href="allskills.html"
+                                aria-label="See all aerial and pole skills">See all</a></p>
+                    </div>
+                </div>
+                <div class="nav-item-div">
+                    <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a>
+                    </h2>
+                </div>
+                <div class="nav-item-div">
+                    <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
+                </div>
             </div>
-        </div>
-        <div class="nav-item-div">
-            <button class="nav-item" id="nav-item"><h2>Shops</h2></button>
-            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-            <div class="dropdown-container" id="dropdown-container">
-                <p class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a></p>
-                <p class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></p>
-                <p class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></p>
+            <div class="nav-input">
+                <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
+                <div class="search-items">
+                    <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
+                </div>
             </div>
-        </div>
-        <div class="nav-item-div">
-            <button class="nav-item" id="nav-item"><h2>Skills</h2></button>
-            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-            <div class="dropdown-container" id="dropdown-container">
-                <p class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></p>
-                <p class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></p>
-                <p class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></p>
-                <p class="dropdown-item"><a href="hammock.html" aria-label="Hammock or sling skills">Hammock/sling</a></p>
-                <p class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></p>
-                <p class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps + rope</a></p>
-                <p class="dropdown-item"><a href="otherskills.html" aria-label="Specialty aerial skills">Specialty</a></p>
-                <p class="dropdown-item"><a href="allskills.html" aria-label="See all aerial and pole skills">See all</a></p>
-            </div>
-        </div>
-        <div class="nav-item-div">
-            <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a></h2>
-        </div>
-        <div class="nav-item-div">
-            <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
-        </div>
-    </div>
-    <div class="nav-input">
-        <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
-        <div class="search-items">
-            <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
-            <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
-        </div>
-    </div>
         </nav>
 
     </header>
@@ -95,13 +193,15 @@
             <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
                 to discover studios, coaches, performers, brands, and other useful resources all over the world.
                 It was created with the aim to be up-to-date, inclusive, accessible, and completely free.
-            <p class="about-p">This platform is a project by self-taught newbie developer and hobby aerialist Yaiza Canopoli.</p>
+            <p class="about-p">This platform is a project by self-taught newbie developer and hobby aerialist Yaiza
+                Canopoli.</p>
             </p>
             <h2 class="about-h2">Follow our journey</h2>
             <p class="about-p">The Aerial Arts Hub is a passion project of amateur aerialist and self-taught
                 developer Yaiza Canopoli. She has been chronicling her journey developing it in a
                 newsletter—you can subscribe over at <a href="https://theaerialartshub.substack.com/" target="_blank"
-                    class="text-link" aria-label="Substack newsletter">theaerialartshub.substack.com</a>. You can also follow
+                    class="text-link" aria-label="Substack newsletter">theaerialartshub.substack.com</a>. You can also
+                follow
                 The Aerial Arts Hub on <a href="https://www.instagram.com/theaerialartshub/" target="_blank"
                     class="text-link" aria-label="Instagram account">Instagram</a>.
             </p>
@@ -129,7 +229,8 @@
             <p class="footer-link" aria-label="About page"><a href="#header">About</a></p>
             <p class="footer-link" aria-label="Sign in"><a href="signin.html">Sign in</a></p>
         </div>
-        <a href="#header" aria-label="Back to the top"><img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top"></a>
+        <a href="#header" aria-label="Back to the top"><img class="arrow-up" src="assets/chevron-up.svg"
+                alt="Back to the top"></a>
     </footer>
 
     <script src="script.js"></script>
